# pasfmt

./: CHANGELOG.md  Cargo.toml  README.md  index.html  versions.json
.github/workflows/: build-web-demo.yaml  deploy-web-demo.yaml
.github/workflows/build-web-demo/: action.yaml
.github/workflows/setup/: action.yaml
assets/: index-7BKVFG6x.js  index-Cc1k73Qe.js  index-D9bO0pfm.js  index-Dkzi7F1d.js  index-fDKxwPAk.css  web_bg-B6Ov7qBq.wasm
core/: CHANGELOG.md  Cargo.toml
core/benches/: benchmark_lexer.rs
core/datatests/: Cargo.toml
core/datatests/generators/: logical_line_parser.rs  optimising_line_formatter.rs
core/src/: formatter.rs  lang.rs  test_utils.rs
core/src/defaults/: lexer.rs  parser.rs  reconstructor.rs
core/src/rules/: comment_contents.rs  conditional_directive_consolidator.rs  eof_newline.rs  formatting_toggle.rs  generics_consolidator.rs  ignore_asm_instructions.rs  mod.rs  (+3 more)
docs/: CONFIGURATION.md
front-end/: Cargo.toml
front-end/benches/: .gitignore  benchmark_submodules.rs
front-end/src/: lib.rs  main.rs
front-end/tests/: file_discovery.rs  idempotence.rs  logging.rs  modes.rs  tests.rs  utils.rs
fuzz/: Cargo.toml
misc/: generate_keyword_hash_fn.sh  keywords.txt
orchestrator/: CHANGELOG.md  Cargo.toml
orchestrator/src/: command_line.rs  file_formatter.rs  formatting_orchestrator.rs
pkg/master/: web_bg.wasm
pkg/v0.5.1/: web.js  web_bg.wasm
pkg/v0.6.0/: web.js  web_bg.wasm
pkg/v0.7.0/: web_bg.wasm
web/: Cargo.toml
web/demo/: index.html  package-lock.json  package.json  vite.config.mts
web/src/: lib.rs
(+17 files in other folders)
